--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DJANGO_SECRET_KEY=fhjshf!4@k5n4lzq30nm^8+2x7tx-y)g98tp)g_x3uzn5b4$8v+
-DATABASE_URL=postgres://user:password@localhost:5432/dbname
+DATABASE_URL=postgresql://shedshyi:lNmlAspAf1IQnvqQ730w65tIy8pgSXOU@dpg-cvtogmfgi27c73a8dbhg-a.oregon-postgres.render.com/monitoring_db_j0ny
 DEBUG=False
